--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: Brian Abadia
+#logo: images/img/headshot_cir.pgn
+description: Data Analyst pursuing MS in Data Science
+show_downloads: true
 theme: jekyll-theme-minimal
-title: Brian Abadia's homepage
-description: Bookmark this to keep an eye on my project updates!
+
