--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Brian Abadia
-#logo: images/img/headshot_cir.pgn
+logo: images/img/headshot_cir.pgn
 description: Data Analyst pursuing MS in Data Science
 show_downloads: true
 theme: jekyll-theme-minimal
